# swagger_server/controllers/bid_controller.py
@@ -1,0 +1,26 @@
+import connexion
+import six
+
+from swagger_server import util
+
+
+def get_bid():  # noqa: E501
+    """Gets current bid estimate and data with user id.
+
+     # noqa: E501
+
+
+    :rtype: None
+    """
+    return 'do some magic!'
+
+
+def post_bid():  # noqa: E501
+    """Posts bid to server. Returns accepted or denied states.
+
+     # noqa: E501
+
+
+    :rtype: None
+    """
+    return 'do some magic!'
