# swagger_server/controllers/data_controller.py
@@ -1,0 +1,59 @@
+import connexion
+import six
+
+from swagger_server import util
+
+
+def delete_data():  # noqa: E501
+    """Delete data of scheme type
+
+     # noqa: E501
+
+
+    :rtype: None
+    """
+    return 'do some magic!'
+
+
+def get_data():  # noqa: E501
+    """Get data of scheme type
+
+     # noqa: E501
+
+
+    :rtype: None
+    """
+    return 'do some magic!'
+
+
+def get_data_schemes():  # noqa: E501
+    """Lists all data shemes
+
+     # noqa: E501
+
+
+    :rtype: None
+    """
+    return 'do some magic!'
+
+
+def post_add_data():  # noqa: E501
+    """Add data of scheme type
+
+     # noqa: E501
+
+
+    :rtype: None
+    """
+    return 'do some magic!'
+
+
+def put_add_scheme():  # noqa: E501
+    """Add data scheme
+
+     # noqa: E501
+
+
+    :rtype: None
+    """
+    return 'do some magic!'
