# swagger_server/controllers/model_controller.py
@@ -1,0 +1,59 @@
+import connexion
+import six
+
+from swagger_server import util
+
+
+def delete_model():  # noqa: E501
+    """Deletes model of id
+
+     # noqa: E501
+
+
+    :rtype: None
+    """
+    return 'do some magic!'
+
+
+def get_model():  # noqa: E501
+    """gets model of id
+
+     # noqa: E501
+
+
+    :rtype: None
+    """
+    return 'do some magic!'
+
+
+def options_model():  # noqa: E501
+    """Gets all models
+
+     # noqa: E501
+
+
+    :rtype: None
+    """
+    return 'do some magic!'
+
+
+def post_model():  # noqa: E501
+    """Adds new version of model of id
+
+     # noqa: E501
+
+
+    :rtype: None
+    """
+    return 'do some magic!'
+
+
+def put_model():  # noqa: E501
+    """Adds new model
+
+     # noqa: E501
+
+
+    :rtype: None
+    """
+    return 'do some magic!'
