# swagger_server/controllers/simulation_controller.py
@@ -1,0 +1,37 @@
+import connexion
+import six
+
+from swagger_server import util
+
+
+def get_simulation():  # noqa: E501
+    """Lists simulations with no id. With id it returns data for simulation
+
+     # noqa: E501
+
+
+    :rtype: None
+    """
+    return 'do some magic!'
+
+
+def options_simulation():  # noqa: E501
+    """Shows simulation types and options
+
+     # noqa: E501
+
+
+    :rtype: None
+    """
+    return 'do some magic!'
+
+
+def post_simulation():  # noqa: E501
+    """Creates new simulation. Starts simulation if given id.
+
+     # noqa: E501
+
+
+    :rtype: None
+    """
+    return 'do some magic!'
